--- a/src/components/Loader/styles.css
+++ b/src/components/Loader/styles.css
@@ -6,7 +6,10 @@
   position: absolute;
   background: rgba(255, 255, 255, 0.6);
   z-index: 10000;
-  text-align: center; }
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 .loader {
   position: relative;
