--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -7,6 +7,9 @@
   background: rgba( 255, 255, 255, 0.6 );
   z-index: 10000;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content:center;
 }
 .loader {
   position: relative;
