--- a/src/scenes/Main/scenes/Point/components/SavingPoint/components/PhoneInput/styles.css
+++ b/src/scenes/Main/scenes/Point/components/SavingPoint/components/PhoneInput/styles.css
@@ -1,2 +1,4 @@
 .inputPhone {
   text-align: center; }
+
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlcy5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRSxtQkFBbUIsRUFBRSIsImZpbGUiOiJzdHlsZXMuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiLmlucHV0UGhvbmUge1xuICB0ZXh0LWFsaWduOiBjZW50ZXI7IH1cbiJdfQ== */
