--- a/src/scenes/Main/scenes/Orders/components/OrderList/styles1.css
+++ b/src/scenes/Main/scenes/Orders/components/OrderList/styles1.css
@@ -2,3 +2,5 @@
   margin-top: 1px;
   width: auto;
   height: 100px; }
+
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlczEuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBO0VBQ0UsZ0JBQWdCO0VBQ2hCLFlBQVk7RUFDWixjQUFjLEVBQUUiLCJmaWxlIjoic3R5bGVzMS5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIucGFwZXIge1xuICBtYXJnaW4tdG9wOiAxcHg7XG4gIHdpZHRoOiBhdXRvO1xuICBoZWlnaHQ6IDEwMHB4OyB9XG4iXX0= */
